# BitCoin_Trading

./: .env.example  .gitignore  ADAPTIVE_EXIT_ARCHITECTURE_AND_STACK_MAP.md  ADAPTIVE_EXIT_BLUEPRINT_AND_INTEGRATION_MAP.md  ADAPTIVE_EXIT_PHASE1_INVENTORY.md  ADAPTIVE_EXIT_PHASE2_MASTER_LIST.md  ADAPTIVE_EXIT_PHASE3_DESIGN.md  ADAPTIVE_EXIT_R_CALIBRATION_FINAL_VERDICT.md  ADAPTIVE_EXIT_R_CALIBRATION_PHASE0_DIAGNOSIS.md  ADAPTIVE_EXIT_R_CALIBRATION_STAGE_B_PHASE1_CADENCE_REPLAY.md  ADAPTIVE_EXIT_R_CALIBRATION_STAGE_B_PHASE1_DESIGN.md  ADAPTIVE_EXIT_R_CALIBRATION_STAGE_B_PHASE1_REPLAY_RESULTS.md  ANALYZE_EXIT_SYSTEM_CODE_MAP.md  CLAUDE.md  COIN_SELECTION_PIPELINE_AUDIT.md  DAILY_UNIVERSE_REFRESH_BLUEPRINT.md  ENTRIES_QUALITY_DIAGNOSIS.md  ENTRY_GAPS_AND_TIMEFRAME_INVESTIGATION_FINDINGS.md  EXIT_AUTHORITY_TRADE_LEDGER.md  EXIT_SYSTEMS_DEEP_FORENSIC_FINDINGS.md  EXIT_SYSTEM_CODE_MAP.md  FOUR_ELEMENT_RECALIBRATION_REPORT_2026-06-11.md  IDENTIFIED_ISSUES.md  IMPLEMENT_DAILY_UNIVERSE_REFRESH_SYSTEM.md  IMPLEMENT_DYNAMIC_ADAPTIVE_EXIT_SYSTEM.md  IMPLEMENT_ENTRY_QUALITY_SELECTIVITY.md  IMPLEMENT_ENTRY_VOLUME_GATE.md  IMPLEMENT_EXIT_AUTHORITY_CONSOLIDATION.md  IMPLEMENT_EXIT_GIVEBACK_FIX.md  IMPLEMENT_PROMPT_AND_PRICE_LOGGING.md  INVESTIGATE_EXIT_SYSTEMS_DEEP_REPORT.md  Makefile  NEUTRALITY_AND_EXIT_SYSTEM_FIX_REPORT.md  PF_LC_TOP15_3_3_CHANDELIER_BAND_TUNING.md  PHASE0_EXIT_AUTHORITY_FORENSICS.md  PROFIT_FETCHING_SYSTEM_IMPLEMENTATION_REPORT.md  PROJECT_BIBLE.md  PROJECT_BLUEPRINT.md  PROJECT_DEEP_ANALYSIS.md  README.md  (+176 more)
data/: README.md  universe_state.json
dev_notes/: COMBINED_CROSS_CHECK_REPORT.md  COMBINED_ENTERPRISE_AUDIT.md  COMBINED_PIPELINE_VERIFICATION.md  COMPLETE_ARCHITECTURE_TRUTH.md  CROSS_PHASE_PIPELINE_E2E_MASTER.md  IMPLEMENT_PRICE_SOURCE_DIVERGENCE_FIX_PROFESSIONAL.md  LIVE_SIMULATION_REPORT.md  phase0_summary.md  (+93 more)
(+1565 files in other folders)
